Use ImmutableMap and ImmutableList
Change-Id: Ib7185376610a02e28f15d9e9858355c8d8b99378